# CNCMachine

./: .gitignore  Allie.pncconf  Allie.stepconf  LINUXCNC_VERSION  README.md  SOP.md  argon-spindle.drc  fusion360-allie.machine  fusion360-linuxcnc-post.cps  granity-spindle-position.drc  granity-spindle-velocity.drc  indramat-j-pulley-balance.md  probe-calibration.xlsx  spindle-j-pulley-balance.md  spindleSpeeds.xlsx  t
Allie/: .gitignore  Allie.hal  Allie.hal~  Allie.ini  Allie.ini~  _postgui_call_list.hal  autosave.halscope  custom.hal  custom.hal~  custom_postgui.hal  custom_postgui.hal~  custompanel.hal  custompanel.xml  custompanel.xml~  linuxcnc.var  linuxcnc.var.bak  mpg.hal  probe.hal  spindle.hal  spindle.xml  spindle_postgui.hal  tool.tbl  tool.tbl.bak  wj200.hal
Allie/Allie.old/: Allie.hal  Allie.ini  custompanel.xml  tool.tbl
Allie/subs/: probe-corner.ngc  probe-spindle-nose.ngc  probe-tool.ngc  probe-toolsetter.ngc  probe-y-neg.ngc  probe-y-pos.ngc  probe-z.ngc  x-probe-offset.ngc  x-reverse-probe-offset.ngc  y-probe-offset.ngc  z-probe-offset.ngc
EtherCAT/: .gitignore  NOTES.md  README.md  akd-original.md  akd-spindle.hal  argon-rs  argon-spindle.hal  cia402.hal  cia402.ini  control-box-software  control-box.hal  custompanel.hal  custompanel.xml  ethercat-conf.xml  linuxcnc.var  lowpass-calc.ods  spindle-motor-only-vibes.csv  spindle-vibes.csv  spindle.hal  tool.tbl
EtherCAT/subs/: probe-boss.ngc  probe-corner-bl.ngc  probe-large-tool.ngc  probe-rect.ngc  probe-spindle-nose.ngc  probe-tool.ngc  probe-x-boss.ngc  probe-x-neg.ngc  probe-x-pos.ngc
IndramatResolver/: IndramatResolver-cache.lib  IndramatResolver.bck  IndramatResolver.dcm  IndramatResolver.lib  IndramatResolver.sch  sym-lib-table
MPGTestConfig/: my_LinuxCNC_machine.pncconf
UnifiedBreakout/UnifiedBreakout/: UnifiedBreakout-bom.csv  UnifiedBreakout-cache.lib  UnifiedBreakout-rescue.lib  UnifiedBreakout.csv  UnifiedBreakout.kicad_pcb  UnifiedBreakout.kicad_pcb-bak  UnifiedBreakout.kicad_prl  UnifiedBreakout.kicad_pro  UnifiedBreakout.kicad_sch  UnifiedBreakout.pro  UnifiedBreakout.sch  UnifiedBreakout.sch-bak  UnifiedBreakout.xml  _autosave-UnifiedBreakout.sch  argon_encoder.kicad_sch  argon_encoder.sch  argon_estop.kicad_sch  argon_estop.sch  argon_io.kicad_sch  argon_io.sch  farnell-bom.py  fp-info-cache  fp-lib-table  jog_pendant.kicad_sch  jog_pendant.sch  mesa_p3_back_panel.sch  mesa_prob_rfx2_p2_internal.kicad_sch  mesa_prob_rfx2_p2_internal.sch  mesa_prob_rfx2_p3_rear.kicad_sch  mesa_prob_rfx2_p3_rear.sch  motor_connector.kicad_sch  motor_connector.sch  motor_connector.sch-bak  opto_input.kicad_sch  opto_input.sch  relay.kicad_sch  relay.sch  sym-lib-table
control-box/: Cargo.toml  README.md
control-box-common/: Cargo.toml
control-box-common/src/: lib.rs
control-box-hardware/: .gitignore  cnc-interface-panel.kicad_pcb  cnc-interface-panel.kicad_pro  cnc-interface-panel.kicad_sch  fp-lib-table
control-box-hardware/cnc-interface-panel-footprints.pretty/: PEC11L4115FS0020.kicad_mod  (+3 more)
control-box-software/: Cargo.toml  module.hal  rust-toolchain.toml
control-box-software/src/: main.rs
control-box/.cargo/: config.toml
control-box/src/: main.rs
freecad-tool-library/: .gitattributes  22mm-3fl-indexable.fctb  3mm-3fl-alupower-test.fctb  50mm-90deg-facemill.fctb  5mm-drill.fctb  5mm-spot.fctb  6mm-3fl-alupower-test.fctb  8mm-4fl-chamfer.fctb  Library.fctl  RECIPES.md  test.fctb
tool-data/: 3 Flute Carbide End Mill for Aluminium 5mm Diameter 45° Helix Associated Production Tools.html  5mm Diameter Carbide Drill 6mm Shank 26mm Flute Length 75mm Long AlTiN Coated Associated Production Tools.html  5mm Diameter Variable Helix Carbide End Mill for Aluminium DLC Coated 13mm Flute Associated Production Tools.html  6.0mm Diameter Precision Machine Reamer Uncoated Carbide Straight Flute Associated Production Tools.html  Internal Mini Carbide Thread Milling Cutter M6x1 3xD DLC Coated for Alumiuium Associated Production Tools.html  Spiral Flute Chamfering Milling Cutter 6mm Diameter AlTiN Coated Carbide 90° Point 4 Flute Associated Production Tools.html
(+363 files in other folders)
