[package]
name = "control-box-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.8", default-features = false }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
