[package]
name = "control-box-software"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
control-box-common = { path = "../control-box-common" }
postcard = { version = "1.0.8", features = ["use-std"] }
serialport = "4.3.0"
