[package]
name = "control-box-software"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
control-box-common = { path = "../control-box-common" }
futures-lite = "2.3.0"
linuxcnc-hal = "0.3.0"
postcard = { version = "1.0.8", features = ["use-std"] }
rtapi-logger = "0.2.0"
rustix = "0.38.34"
serialport = "4.3.0"
smol = "2.0.0"
