[package]
name = "control-box"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4.0"
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.4"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "arch-cortex-m",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f103c8",
    "memory-x",
    "time-driver-any",
    "exti",
    "unstable-pac",
] }

[profile.release]
debug = 2
opt-level = "z"
lto = true
codegen-units = 1
